[package]
name = "korat"
version = "0.1.1"
authors = ["Giorgos Georgiou <giorgos.georgiou@outlook.com>"]
description = "Convenience methods for the conversion of rusoto attribute values to concrete types for dynamodb"
repository = "https://github.com/behos/korat"
keywords = ["dynamodb", "rusoto"]
license = "Apache-2.0"

[dependencies]
rusoto_dynamodb = ">= 0.25.0"
quick-error = ">= 1.2.0"
